# stream-connector-example

./: .gitignore
qt-example/: .gitignore  CMakeLists.txt  README.md  local.cmake.template
qt-example/src/: CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.h  CommunicationHandler.cpp  CommunicationHandler.h  ConfigReader.cpp  ConfigReader.h  Configuration.cpp  Configuration.h  DatapointEmitter.cpp  DatapointEmitter.h  DummyReader.cpp  DummyReader.h  EventEmitter.cpp  EventEmitter.h  GeoPositionEmitter.cpp  GeoPositionEmitter.h  JsonUtil.cpp  Qt-Connector-Example.cpp
qt-example/src/util/: JsonUtil.cpp  JsonUtil.h
